--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "npm run typeorm -- migration:generate -d ormconfig.ts",
     "migration:run": "npm run typeorm -- migration:run -d ormconfig.ts",
-    "migration:revert": "npm run typeorm -- migration:revert -d ormconfig.ts"
+    "migration:revert": "npm run typeorm -- migration:revert -d ormconfig.ts",
+    "cleanup:all": "node cleanup-all-data.js"
   },
   "dependencies": {
     "@nestjs/apollo": "^13.1.0",
@@ -32,6 +33,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@supabase/supabase-js": "^2.39.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.0.1",
